--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@
 .App {
     margin: 0 0;
     overflow-x: hidden;
-    width: 100%;
+    max-width: 2000px;
     height: auto;
     background-color: #212a2c;
     font-family: 'Ubuntu', sans-serif;
@@ -45,15 +45,47 @@ h3 {
 p {
     margin: 50px 0;
 }
+/*      #####################      CONTACT       #############################       */
+
+#contact {
+    position: fixed;
+    top: 3%;
+    left: 2%;
+    z-index: 10;
+    background-color: #212a2c6c; 
+    display: flex;
+    flex-direction: column; 
+    padding: 5px;
+    font-size: 0.7em;     
+ }
+ 
+ #contact a { 
+    color: #00ff00;  
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+ }
+
+ #contact a:hover .contact-link, #contact a:hover{
+    color: #ffb200;
+ }
+
+ .contact-link {
+    display: none;
+ }
+
+ #contact:hover .contact-link {
+    display: inline;
+    color: #00ff00;
+  }
 
 /*      #####################       NAVBAR        ############################       */
 
-ul {
+.ul-navbar, .dropdown-content-on {
     width: 100%;
-    padding: 30px 50px 20px;
+    padding: 10px 20px;
     box-sizing: border-box;
     display: flex;
     justify-content: right;
+    text-align: right !important;
     list-style: none;
 }
 
@@ -68,7 +100,6 @@ ul {
 }
 
 .dropdown-content-on {
-    display: flex;
     flex-direction: column;
     align-items: flex-end;
     position: absolute;
@@ -112,7 +143,7 @@ a:hover {
 
 .hero, .hero-project {
     max-width: 80%;
-    margin: 0 auto 50px;
+    margin: 0 auto 20px;
     display: flex;
     justify-content: center;
 }
@@ -165,9 +196,10 @@ span {
 }
 
 .read-more {
+    padding: 0 7px;
     font-family: Orbitron, sans-serif;
     letter-spacing: 0.15em;
-    line-height: 1;
+    line-height: 1.3;
     background-color: #a87bff;
     color: #fffa86;
     position: absolute;
@@ -177,6 +209,7 @@ span {
 
 .read-more:hover {
     background-color: #ff1a1a;
+    color: #fffa86;
 }
 
 /*      ###############################    PROJECT DETAILS   ###########################        */
@@ -241,3 +274,35 @@ span {
     vertical-align: middle;
     line-height: 100px;
 }
+
+/*      ###################################     CV      ##############################       */
+
+.cv-h1, .cv-h2 {
+    font-family: 'Ubuntu', sans-serif;
+    letter-spacing: 0.1em;
+}
+
+.cv-h1 {   
+    font-size: 1.5em;
+    margin-bottom: 25px;
+}
+
+.cv-h2 {
+    font-size: 1.15em;
+}
+
+.cv-ul li a {
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.cv-p, .cv-ul {
+    line-height: 1.25;
+    font-size: 1em;
+    margin: 25px 0;
+}
+
+.cv-ul li {
+    padding: 0;
+    margin: 0;
+  }
+  
